# signal-mcp

./: .gitignore  CLAUDE.md  README.md  check_mcp.py  main.py  pyproject.toml
signal_mcp/: main.py
tests/: test_parse.py
